--- a/resources/views/layouts/adminMTV.phtml
+++ b/resources/views/layouts/adminMTV.phtml
@@ -14,6 +14,7 @@ use Fisharebest\Webtrees\View;
 
 /** @var string $title */
 /** @var string $content */
+/** @var string $modRoot */               // EW.H - MOD ... Root of this Mod
 
 ?>
 
@@ -30,8 +31,8 @@ use Fisharebest\Webtrees\View;
 
         <link rel="stylesheet" href="<?= e(asset('css/vendor.min.css')) ?>">
         <link rel="stylesheet" href="<?= e(asset('css/administration.min.css')) ?>">
-        <!-- EW.H - MOD -->
-        <link rel="stylesheet" href="<?= '/webtreesT/modules_v4/huhwt-mtv/public/css/huhwt.min.css' ?>">
+        <!-- EW.H - MOD ... inject own style -->
+        <link rel="stylesheet" href="<?=  $modRoot . '/resources/css/huhwt.min.css' ?>">
         <!--            -->
 
         <?= View::stack('styles') ?>
@@ -43,6 +44,7 @@ use Fisharebest\Webtrees\View;
         <?= DebugBar::renderHead() ?>
     </head>
     <body class="container-lg wt-global wt-control-panel">
+        <!-- EW.H - MOD ... adminMTV.phtml -->
         <header>
             <div class="wt-accessibility-links position-fixed">
                 <a class="sr-only sr-only-focusable btn btn-info btn-sm" href="#content">
@@ -71,7 +73,7 @@ use Fisharebest\Webtrees\View;
             </ul>
         </header>
 
-        <div id="content">EW.H - MOD ... <?= $actLan ?></div>
+        <div id="content">EW.H - MOD ... </div>
 
         <?php foreach (FlashMessages::getMessages() as $message) : ?>
             <div class="alert alert-<?= $message->status ?> alert-dismissible" role="alert">
@@ -86,11 +88,11 @@ use Fisharebest\Webtrees\View;
 
         <script src="<?= e(asset('js/vendor.min.js')) ?>"></script>
         <script src="<?= e(asset('js/webtrees.min.js')) ?>"></script>
-        <!-- EW.H - MOD -->
-        <script src="<?= '/webtreesT/modules_v4/huhwt-mtv/public/js/huhwt.min.js' ?>"></script>
+        <!-- EW.H - MOD ... inject own script referenced by event -->
+        <script src="<?=  $modRoot . '/resources/js/huhwt.min.js'?>"></script>
         <!--            -->
 
-        <?= View::stack('javascript') ?>
+        <?= View::stack('javascript') ?>    <!-- EW.H - MOD ... here goes declaration of MTV-events -->
 
         <?= app(ModuleService::class)->findByInterface(ModuleGlobalInterface::class)->map(static function (ModuleGlobalInterface $module): string {
     return $module instanceof ModuleCustomInterface || $module instanceof CustomCssJsModule ? '' : $module->bodyContent();
