--- a/resources/views/layouts/adminMTV.phtml
+++ b/resources/views/layouts/adminMTV.phtml
@@ -73,7 +73,7 @@ use Fisharebest\Webtrees\View;
             </ul>
         </header>
 
-        <div id="content">EW.H - MOD ... </div>
+        <div id="content">EW.H - MOD ... (V-1.1)</div>
 
         <?php foreach (FlashMessages::getMessages() as $message) : ?>
             <div class="alert alert-<?= $message->status ?> alert-dismissible" role="alert">
