--- a/src/sass/huhwt.scss
+++ b/src/sass/huhwt.scss
@@ -8,8 +8,8 @@ $rlevels:
     "T",
     "V";
 
-@each $rlevel in $rlevels {
-    div.tv#{$rlevel}_box.rootPerson {
+@each $earmark in $rlevels {
+    div.tv#{$earmark}_box.rootPerson {
     border-width: 3px!important
     }
 }
@@ -40,94 +40,94 @@ $rlevels:
     * along with this program. If not, see <http://www.gnu.org/licenses/>.
     */
 
-@each $rlevel in $rlevels {
+@each $earmark in $rlevels {
    /*
     * Interactive tree
     *
     * wt-chart, wt-chart-interactive
     */
 
-    [dir] #tv#{$rlevel}bCompact {
+    [dir] #tv#{$earmark}bCompact {
         background-image: url(images/compact.png);
     }
-    [dir] table#tv#{$rlevel}TreeBorder td#tv#{$rlevel}_tree_top,
-    [dir] table#tv#{$rlevel}TreeBorder td#tv#{$rlevel}_tree_topleft {
+    [dir] table#tv#{$earmark}TreeBorder td#tv#{$earmark}_tree_top,
+    [dir] table#tv#{$earmark}TreeBorder td#tv#{$earmark}_tree_topleft {
         background: none;
     }
-    table#tv#{$rlevel}TreeBorder td#tv#{$rlevel}_tree_top div {
+    table#tv#{$earmark}TreeBorder td#tv#{$earmark}_tree_top div {
         font-family: Arial, Verdana, sans-serif;
         font-size: 18px;
     }
-    [dir] #tv#{$rlevel}_tree,
-    [dir] table#tv#{$rlevel}TreeBorder td,
-    [dir] table#tv#{$rlevel}TreeBorder td#tv#{$rlevel}_tree_bottom,
-    [dir] table#tv#{$rlevel}TreeBorder td#tv#{$rlevel}_tree_bottomleft,
-    [dir] table#tv#{$rlevel}TreeBorder td#tv#{$rlevel}_tree_bottomright,
-    [dir] table#tv#{$rlevel}TreeBorder td#tv#{$rlevel}_tree_left,
-    [dir] table#tv#{$rlevel}TreeBorder td#tv#{$rlevel}_tree_right,
-    [dir] table#tv#{$rlevel}TreeBorder td#tv#{$rlevel}_tree_topright {
+    [dir] #tv#{$earmark}_tree,
+    [dir] table#tv#{$earmark}TreeBorder td,
+    [dir] table#tv#{$earmark}TreeBorder td#tv#{$earmark}_tree_bottom,
+    [dir] table#tv#{$earmark}TreeBorder td#tv#{$earmark}_tree_bottomleft,
+    [dir] table#tv#{$earmark}TreeBorder td#tv#{$earmark}_tree_bottomright,
+    [dir] table#tv#{$earmark}TreeBorder td#tv#{$earmark}_tree_left,
+    [dir] table#tv#{$earmark}TreeBorder td#tv#{$earmark}_tree_right,
+    [dir] table#tv#{$earmark}TreeBorder td#tv#{$earmark}_tree_topright {
         background: none;
     }
-    [dir] #tv#{$rlevel}_tree div.tv_hline,
-    [dir] #tv#{$rlevel}_tree div.tv_vline {
+    [dir] #tv#{$earmark}_tree div.tv_hline,
+    [dir] #tv#{$earmark}_tree div.tv_vline {
         background-color: #81a9cb;
     }
-    #tv#{$rlevel}_tree table.tv_tree td.tv_vline {
+    #tv#{$earmark}_tree table.tv_tree td.tv_vline {
         width: 1px;
         height: 100%;
     }
-    [dir] #tv#{$rlevel}_tree table.tv_tree td.tv_vline {
+    [dir] #tv#{$earmark}_tree table.tv_tree td.tv_vline {
         background: repeat-x 50% 50%;
     }
-    [dir] #tv#{$rlevel}_tree table.tv_tree td.tv_vline_h {
+    [dir] #tv#{$earmark}_tree table.tv_tree td.tv_vline_h {
         background-image: url(images/vline.gif); /* customizable: image color must be the same color than div.tv_vline and div.tv_hline */
     }
-    #tv#{$rlevel}_tree table.tv_tree td.tv_vline_t {
+    #tv#{$earmark}_tree table.tv_tree td.tv_vline_t {
         vertical-align: bottom;
     }
-    [dir] #tv#{$rlevel}_tree table.tv_tree td.tv_vline_t {
+    [dir] #tv#{$earmark}_tree table.tv_tree td.tv_vline_t {
         background-image: url(images/vline_t.gif); /* customizable: image color must be the same color than div.tv_vline and div.tv_hline */
     }
-    #tv#{$rlevel}_tree table.tv_tree td.tv_vline_b {
+    #tv#{$earmark}_tree table.tv_tree td.tv_vline_b {
         vertical-align: top;
     }
-    [dir] #tv#{$rlevel}_tree table.tv_tree td.tv_vline_b {
+    [dir] #tv#{$earmark}_tree table.tv_tree td.tv_vline_b {
         background-image: url(images/vline_b.gif); /* customizable: image color must be the same color than div.tv_vline and div.tv_hline */
     }
-    #tv#{$rlevel}_tree table.tv_tree td.tv_vline_c,
+    #tv#{$earmark}_tree table.tv_tree td.tv_vline_c,
     .tv_in table.tv_tree td.tv_vline_h {
         vertical-align: middle;
     }
-    #tv#{$rlevel}_tree table.tv_tree td.tv_vline_c {
+    #tv#{$earmark}_tree table.tv_tree td.tv_vline_c {
         height: 1px;
     }
-    #tv#{$rlevel}_tree table.tv_tree div.tv_vline {
+    #tv#{$earmark}_tree table.tv_tree div.tv_vline {
         width: 1px;
     }
-    #tv#{$rlevel}_tree table.tv_tree div.tv_vline_b,
-    #tv#{$rlevel}_tree table.tv_tree div.tv_vline_t {
+    #tv#{$earmark}_tree table.tv_tree div.tv_vline_b,
+    #tv#{$earmark}_tree table.tv_tree div.tv_vline_t {
         height: 50%;
     }
-    #tv#{$rlevel}_tree table.tv_tree div.tv_vline_c {
+    #tv#{$earmark}_tree table.tv_tree div.tv_vline_c {
         height: 1px;
         overflow: hidden;
     }
-    #tv#{$rlevel}_tree table.tv_tree div.tv_vline_h {
+    #tv#{$earmark}_tree table.tv_tree div.tv_vline_h {
         height: 100%;
     }
-    #tv#{$rlevel}_tree div.tv_hline,
-    #tv#{$rlevel}_tree td.tv_hline {
+    #tv#{$earmark}_tree div.tv_hline,
+    #tv#{$earmark}_tree td.tv_hline {
         overflow: hidden;
         width: 8px;
     }
-    #tv#{$rlevel}_tree div.tv_hline {
+    #tv#{$earmark}_tree div.tv_hline {
         height: 1px;
     }
-    #tv#{$rlevel}_tree div.tv_box {
+    #tv#{$earmark}_tree div.tv_box {
         width: 180px;
         border-collapse: collapse;
     }
-    [dir] #tv#{$rlevel}_tree div.tv_box {
+    [dir] #tv#{$earmark}_tree div.tv_box {
         border: thin outset #81a9cb;
         background: #fffdfd;
         margin-top: 2px;
@@ -136,166 +136,166 @@ $rlevels:
         cursor: help;
         border-radius: 4px;
     }
-    [dir="ltr"] #tv#{$rlevel}_tree div.tv_box {
+    [dir="ltr"] #tv#{$earmark}_tree div.tv_box {
         box-shadow: 1px 1px 2px #cfcfdf;
     }
-    [dir="rtl"] #tv#{$rlevel}_tree div.tv_box {
+    [dir="rtl"] #tv#{$earmark}_tree div.tv_box {
         box-shadow: -1px 1px 2px #cfcfdf;
     }
-    #tv#{$rlevel}_tree div.boxExpanded {
+    #tv#{$earmark}_tree div.boxExpanded {
         width: 250px;
     }
-    #tv#{$rlevel}_tree div.tv_box div.tvM {
+    #tv#{$earmark}_tree div.tv_box div.tvM {
         color: #200;
     }
-    [dir] #tv#{$rlevel}_tree div.tv_box div.tvM {
+    [dir] #tv#{$earmark}_tree div.tv_box div.tvM {
         background: #f5fdff;
     }
-    #tv#{$rlevel}_tree div.tv_box div.tvF {
+    #tv#{$earmark}_tree div.tv_box div.tvF {
         color: #002;
     }
-    [dir] #tv#{$rlevel}_tree div.tv_box div.tvF {
+    [dir] #tv#{$earmark}_tree div.tv_box div.tvF {
         background: #fff8f5;
     }
-    #tv#{$rlevel}_tree div.tv_box span.tvSexSymbol {
+    #tv#{$earmark}_tree div.tv_box span.tvSexSymbol {
         font-weight: 700;
         font-family: x-large, serif;
         vertical-align: top;
     }
-    [dir] #tv#{$rlevel}_tree div.tv_box span.tvSexSymbol {
+    [dir] #tv#{$earmark}_tree div.tv_box span.tvSexSymbol {
         margin: 1px;
     }
-    #tv#{$rlevel}_tree div.tv_box span.tvM {
+    #tv#{$earmark}_tree div.tv_box span.tvM {
         color: #8f8fdf;
     }
-    #tv#{$rlevel}_tree div.tv_box span.tvF {
+    #tv#{$earmark}_tree div.tv_box span.tvF {
         color: #df8f8f;
     }
-    [dir] #tv#{$rlevel}_tree .tv_box div.tvF,
-    [dir] #tv#{$rlevel}_tree div.tv_box div.tvM {
+    [dir] #tv#{$earmark}_tree .tv_box div.tvF,
+    [dir] #tv#{$earmark}_tree div.tv_box div.tvM {
         clear: both;
         border: 0;
         margin: 0;
         padding: 1px 4px;
         border-radius: 4px;
     }
-    #tv#{$rlevel}_tree div.tv_box i.dates {
+    #tv#{$earmark}_tree div.tv_box i.dates {
         font-size: 75%;
     }
-    [dir="ltr"] #tv#{$rlevel}_tree div.tv_box i.dates {
+    [dir="ltr"] #tv#{$earmark}_tree div.tv_box i.dates {
         float: right;
         margin-left: 4px;
     }
-    [dir="rtl"] #tv#{$rlevel}_tree div.tv_box i.dates {
+    [dir="rtl"] #tv#{$earmark}_tree div.tv_box i.dates {
         float: left;
         margin-right: 4px;
     }
-    #tv#{$rlevel}_tree div.tv_box img.tv_treelink {
+    #tv#{$earmark}_tree div.tv_box img.tv_treelink {
         height: 15px;
         width: 15px;
     }
-    [dir="ltr"] #tv#{$rlevel}_tree div.tv_box img.tv_treelink {
+    [dir="ltr"] #tv#{$earmark}_tree div.tv_box img.tv_treelink {
         float: right;
     }
-    [dir="rtl"] #tv#{$rlevel}_tree div.tv_box img.tv_treelink {
+    [dir="rtl"] #tv#{$earmark}_tree div.tv_box img.tv_treelink {
         float: left;
     }
-    #tv#{$rlevel}_tree div.tv_box img.tv_box_loading {
+    #tv#{$earmark}_tree div.tv_box img.tv_box_loading {
         height: 12px;
         width: 12px;
     }
-    [dir] #tv#{$rlevel}_tree div.tv_box img.tv_box_loading {
+    [dir] #tv#{$earmark}_tree div.tv_box img.tv_box_loading {
         margin: 2px;
     }
-    [dir="ltr"] #tv#{$rlevel}_tree div.tv_box img.tv_box_loading {
+    [dir="ltr"] #tv#{$earmark}_tree div.tv_box img.tv_box_loading {
         float: right;
     }
-    [dir="rtl"] #tv#{$rlevel}_tree div.tv_box img.tv_box_loading {
+    [dir="rtl"] #tv#{$earmark}_tree div.tv_box img.tv_box_loading {
         float: left;
     }
-    #tv#{$rlevel}_tree div.tv_box div.tv_person_expanded {
+    #tv#{$earmark}_tree div.tv_box div.tv_person_expanded {
         min-height: 55px;
     }
-    [dir] #tv#{$rlevel}_tree div.tv_box div.tv_person_expanded {
+    [dir] #tv#{$earmark}_tree div.tv_box div.tv_person_expanded {
         padding: 2px;
     }
-    #tv#{$rlevel}_tree div.tv_box img {
+    #tv#{$earmark}_tree div.tv_box img {
         max-height: 50px;
         max-width: 80px;
         width: auto;
     }
-    [dir] #tv#{$rlevel}_tree div.tv_box img {
+    [dir] #tv#{$earmark}_tree div.tv_box img {
         margin: 2px;
     }
-    [dir="ltr"] #tv#{$rlevel}_tree div.tv_box img {
+    [dir="ltr"] #tv#{$earmark}_tree div.tv_box img {
         float: left;
     }
-    [dir="rtl"] #tv#{$rlevel}_tree div.tv_box img {
+    [dir="rtl"] #tv#{$earmark}_tree div.tv_box img {
         float: right;
     }
-    [dir="ltr"] #tv#{$rlevel}_tree div.tv_box .icon-silhouette-F,
-    [dir="ltr"] #tv#{$rlevel}_tree div.tv_box .icon-silhouette-M,
-    [dir="ltr"] #tv#{$rlevel}_tree div.tv_box .icon-silhouette-U {
+    [dir="ltr"] #tv#{$earmark}_tree div.tv_box .icon-silhouette-F,
+    [dir="ltr"] #tv#{$earmark}_tree div.tv_box .icon-silhouette-M,
+    [dir="ltr"] #tv#{$earmark}_tree div.tv_box .icon-silhouette-U {
         float: left;
     }
-    [dir="rtl"] #tv#{$rlevel}_tree div.tv_box .icon-silhouette-F,
-    [dir="rtl"] #tv#{$rlevel}_tree div.tv_box .icon-silhouette-M,
-    [dir="rtl"] #tv#{$rlevel}_tree div.tv_box .icon-silhouette-U {
+    [dir="rtl"] #tv#{$earmark}_tree div.tv_box .icon-silhouette-F,
+    [dir="rtl"] #tv#{$earmark}_tree div.tv_box .icon-silhouette-M,
+    [dir="rtl"] #tv#{$earmark}_tree div.tv_box .icon-silhouette-U {
         float: right;
     }
-    #tv#{$rlevel}_tree div.tv_box div.tv_person_expanded a {
+    #tv#{$earmark}_tree div.tv_box div.tv_person_expanded a {
         font-weight: 700;
     }
-    #tv#{$rlevel}_tools,
-    #tv#{$rlevel}StylesSubmenu {
+    #tv#{$earmark}_tools,
+    #tv#{$earmark}StylesSubmenu {
         display: inline-block;
         position: absolute;
         top: 0;
         z-index: 90;
     }
-    [dir] #tv#{$rlevel}_tools,
-    [dir] #tv#{$rlevel}StylesSubmenu {
+    [dir] #tv#{$earmark}_tools,
+    [dir] #tv#{$earmark}StylesSubmenu {
         padding: 0;
         margin: 0;
         background-color: #efefef;
         border: 1px outset #dfdfdf;
         border-radius: 4px;
     }
-    [dir="ltr"] #tv#{$rlevel}_tools,
-    [dir="ltr"] #tv#{$rlevel}StylesSubmenu {
+    [dir="ltr"] #tv#{$earmark}_tools,
+    [dir="ltr"] #tv#{$earmark}StylesSubmenu {
         left: 0;
         box-shadow: 1px 1px 2px #cfcfdf;
     }
-    [dir="rtl"] #tv#{$rlevel}_tools,
-    [dir="rtl"] #tv#{$rlevel}StylesSubmenu {
+    [dir="rtl"] #tv#{$earmark}_tools,
+    [dir="rtl"] #tv#{$earmark}StylesSubmenu {
         right: 0;
         box-shadow: -1px 1px 2px #cfcfdf;
     }
-    #tv#{$rlevel}StylesSubmenu {
+    #tv#{$earmark}StylesSubmenu {
         display: none;
         top: 0;
         z-index: 91;
     }
-    [dir="ltr"] #tv#{$rlevel}StylesSubmenu {
+    [dir="ltr"] #tv#{$earmark}StylesSubmenu {
         left: 0;
     }
-    [dir="rtl"] #tv#{$rlevel}StylesSubmenu {
+    [dir="rtl"] #tv#{$earmark}StylesSubmenu {
         right: 0;
     }
-    #tv#{$rlevel}_tools ul {
+    #tv#{$earmark}_tools ul {
         list-style: none;
     }
-    [dir] #tv#{$rlevel}_tools ul {
+    [dir] #tv#{$earmark}_tools ul {
         margin: 0;
         padding: 0;
     }
-    #tv#{$rlevel}_tools li.tv_button {
+    #tv#{$earmark}_tools li.tv_button {
         position: relative;
         width: 24px;
         height: 24px;
         vertical-align: middle;
     }
-    [dir] #tv#{$rlevel}_tools li.tv_button {
+    [dir] #tv#{$earmark}_tools li.tv_button {
         padding: 0;
         margin: 0;
         text-align: center;
@@ -303,73 +303,73 @@ $rlevels:
         background-color: #efefef;
         border-radius: 4px;
     }
-    [dir="ltr"] #tv#{$rlevel}_tools li.tv_button {
+    [dir="ltr"] #tv#{$earmark}_tools li.tv_button {
         float: left;
     }
-    [dir="rtl"] #tv#{$rlevel}_tools li.tv_button {
+    [dir="rtl"] #tv#{$earmark}_tools li.tv_button {
         float: right;
     }
-    [dir] #tv#{$rlevel}StylesSubmenu li.tv_button {
+    [dir] #tv#{$earmark}StylesSubmenu li.tv_button {
         float: none;
     }
-    #tv#{$rlevel}_tools li.tv_button a {
+    #tv#{$earmark}_tools li.tv_button a {
         display: block;
     }
-    [dir] #tv#{$rlevel}_tools li.tv_button a {
+    [dir] #tv#{$earmark}_tools li.tv_button a {
         margin: 0;
     }
-    [dir] #tv#{$rlevel}_tools li.tv_button:hover {
+    [dir] #tv#{$earmark}_tools li.tv_button:hover {
         border: thin outset #fdfffd;
         cursor: pointer;
     }
-    [dir] #tv#{$rlevel}_tools li.tvPressed {
+    [dir] #tv#{$earmark}_tools li.tvPressed {
         border: thin inset #fff;
     }
-    #tv#{$rlevel}_tools ul li img {
+    #tv#{$earmark}_tools ul li img {
         width: 22px;
         height: 22px;
         vertical-align: middle;
     }
-    [dir] #tv#{$rlevel}_tools ul li img {
+    [dir] #tv#{$earmark}_tools ul li img {
         border: none;
         margin: 0;
         padding: 0;
         cursor: pointer;
         text-align: center;
     }
-    #tv#{$rlevel}_tools ul li a.help img.icon {
+    #tv#{$earmark}_tools ul li a.help img.icon {
         width: 15px;
         height: 15px;
     }
-    [dir] #tv#{$rlevel}_tools ul li a.help img.icon {
+    [dir] #tv#{$earmark}_tools ul li a.help img.icon {
         margin: 3px 0 0;
         padding: 0;
     }
-    #tv#{$rlevel}ToolsHandler {
+    #tv#{$earmark}ToolsHandler {
         height: 22px;
         width: 2px;
         overflow: hidden;
     }
-    [dir] #tv#{$rlevel}ToolsHandler {
+    [dir] #tv#{$earmark}ToolsHandler {
         cursor: move;
         border: thin inset #f6f6f6;
         margin: 2px;
     }
-    [dir="ltr"] #tv#{$rlevel}ToolsHandler {
+    [dir="ltr"] #tv#{$earmark}ToolsHandler {
         float: left;
     }
-    [dir="rtl"] #tv#{$rlevel}ToolsHandler {
+    [dir="rtl"] #tv#{$earmark}ToolsHandler {
         float: right;
     }
-    [dir] #tv#{$rlevel}ToolsHandler:hover {
+    [dir] #tv#{$earmark}ToolsHandler:hover {
         border: thin outset #f6f6f6;
     }
-    #tv#{$rlevel}_tree div.tv_box div.tvF,
-    #tv#{$rlevel}_tree div.tv_box div.tvM {
+    #tv#{$earmark}_tree div.tv_box div.tvF,
+    #tv#{$earmark}_tree div.tv_box div.tvM {
         color: #000;
     }
-    [dir] #tv#{$rlevel}_tree div.tv_box div.tvF,
-    [dir] #tv#{$rlevel}_tree div.tv_box div.tvM {
+    [dir] #tv#{$earmark}_tree div.tv_box div.tvF,
+    [dir] #tv#{$earmark}_tree div.tv_box div.tvM {
         background: none;
         border: 0;
         margin: 0;
