--- a/resources/views/layouts/adminMTV.phtml
+++ b/resources/views/layouts/adminMTV.phtml
@@ -77,7 +77,7 @@ use Fisharebest\Webtrees\View;
             </ul>
         </header>
 
-        <div id="content">EW.H - MOD ... (V-1.2.4)</div>
+        <div id="content">EW.H - MOD ... (V-2.1.x)</div>
 
         <?php foreach (FlashMessages::getMessages() as $message) : ?>
             <div class="alert alert-<?= $message->status ?> alert-dismissible" role="alert">
