Refactoring, shift to wt2.1.12
Refactoring - flattened the project structure - shift to wt 2.1.12 - all $request-get... capsuled in VALIDATOR

--- a/resources/views/admin/trees-duplicates.phtml
+++ b/resources/views/admin/trees-duplicates.phtml
@@ -1,5 +1,13 @@
 <?php
 
+/**
+ * HuH Extensions for webtrees - Multi-Treeview
+ * Extensions for webtrees to check and display duplicate Individuals in the database.
+ * Copyright (C) 2020-2022 EW.Heinrich
+ * 
+ * derived from resources/views/admin/trees-duplicates.phtml    (wt2.0)
+ */
+
 use Fisharebest\Webtrees\Http\RequestHandlers\ControlPanel;
 use Fisharebest\Webtrees\Http\RequestHandlers\ManageTrees;
 use Fisharebest\Webtrees\Http\RequestHandlers\MergeFactsPage;
