--- a/resources/views/modules/interactive-tree/MultTVchart.phtml
+++ b/resources/views/modules/interactive-tree/MultTVchart.phtml
@@ -1,5 +1,13 @@
 <?php
 
+/**
+ * HuH Extensions for webtrees - Multi-Treeview
+ * Extensions for webtrees to check and display duplicate Individuals in the database.
+ * Copyright (C) 2020-2022 EW.Heinrich
+ * 
+ * derived from resources/views/modules/interactive-tree/chart.phtml    (wt2.0)
+ */
+
 namespace HuHwt\WebtreesMods\Module;
 
 use HuHwt\WebtreesMods\Module\InteractiveTree\InteractiveTreeModMTV;
