--- a/resources/views/modules/interactive-tree/MultTVpage.phtml
+++ b/resources/views/modules/interactive-tree/MultTVpage.phtml
@@ -1,5 +1,13 @@
 <?php
 
+/**
+ * HuH Extensions for webtrees - Multi-Treeview
+ * Extensions for webtrees to check and display duplicate Individuals in the database.
+ * Copyright (C) 2020-2022 EW.Heinrich
+ * 
+ * derived from resources/views/modules/interactive-tree/page.phtml    (wt2.0)
+ */
+
 use Fisharebest\Webtrees\I18N;
 use Fisharebest\Webtrees\View;
 
