--- a/resources/views/modules/interactive-tree/MultTVpageh2.phtml
+++ b/resources/views/modules/interactive-tree/MultTVpageh2.phtml
@@ -1,6 +1,12 @@
 <?php
 
-use Fisharebest\Webtrees\I18N;
+/**
+ * HuH Extensions for webtrees - Multi-Treeview
+ * Extensions for webtrees to check and display duplicate Individuals in the database.
+ * Copyright (C) 2020-2022 EW.Heinrich
+ */
+
+ use Fisharebest\Webtrees\I18N;
 use Fisharebest\Webtrees\View;
 
 ?>
