--- a/resources/views/layouts/adminMTV.phtml
+++ b/resources/views/layouts/adminMTV.phtml
@@ -39,7 +39,7 @@ use Fisharebest\Webtrees\View;
         <link rel="stylesheet" href="<?= e(asset('css/vendor.min.css')) ?>">
         <link rel="stylesheet" href="<?= e(asset('css/administration.min.css')) ?>">
         <!-- EW.H - MOD ... inject own style -->
-        <link rel="stylesheet" href="<?=  $modRoot . '/resources/css/huhwt.min.css' . '?v=2.1.1.0' ?>">
+        <link rel="stylesheet" href="<?=  $modRoot . '/resources/css/huhwt.min.css' . '?v=2.1.17.0' ?>">
         <!--            -->
 
         <?= View::stack('styles') ?>
@@ -79,7 +79,7 @@ use Fisharebest\Webtrees\View;
             </ul>
         </header>
 
-        <div id="content">EW.H - MOD ... (V-2.1.x)</div>
+        <div id="content">EW.H - MOD ... (V-2.1.17)</div>
 
         <?php foreach (FlashMessages::getMessages() as $message) : ?>
             <div class="alert alert-<?= $message->status ?> alert-dismissible" role="alert">
@@ -95,7 +95,7 @@ use Fisharebest\Webtrees\View;
         <script src="<?= e(asset('js/vendor.min.js')) ?>"></script>
         <script src="<?= e(asset('js/webtrees.min.js')) ?>"></script>
         <!-- EW.H - MOD ... inject own script referenced by event -->
-        <script src="<?=  $modRoot . '/resources/js/huhwt.min.js' . '?v=2.1.1.0' ?>"></script>
+        <script src="<?=  $modRoot . '/resources/js/huhwt.min.js' . '?v=2.1.17.0' ?>"></script>
         <!--            -->
 
         <?= View::stack('javascript') ?>    <!-- EW.H - MOD ... here goes declaration of MTV-events -->
