--- a/resources/views/layouts/adminMTV.phtml
+++ b/resources/views/layouts/adminMTV.phtml
@@ -3,7 +3,7 @@
 /**
  * HuH Extensions for webtrees - Multi-Treeview
  * Extensions for webtrees to check and display duplicate Individuals in the database.
- * Copyright (C) 2020-2022 EW.Heinrich
+ * Copyright (C) 2020-2023 EW.Heinrich
  * 
  * derived from resources/views/layouts/administration.phtml
  */
@@ -39,7 +39,7 @@ use Fisharebest\Webtrees\View;
         <link rel="stylesheet" href="<?= e(asset('css/vendor.min.css')) ?>">
         <link rel="stylesheet" href="<?= e(asset('css/administration.min.css')) ?>">
         <!-- EW.H - MOD ... inject own style -->
-        <link rel="stylesheet" href="<?=  $modRoot . '/resources/css/huhwt.min.css' . '?v=2.1.17.2' ?>">
+        <link rel="stylesheet" href="<?=  $modRoot . '/resources/css/huhwt.min.css' . '?v=2.1.17.3' ?>">
         <!--            -->
 
         <?= View::stack('styles') ?>
@@ -53,7 +53,7 @@ use Fisharebest\Webtrees\View;
         <!-- EW.H - MOD ... adminMTV.phtml -->
         <header>
             <div class="wt-accessibility-links position-fixed">
-                <a class="sr-only sr-only-focusable btn btn-info btn-sm" href="#content">
+                <a class="visually-hidden visually-hidden-focusable btn btn-info btn-sm" href="#content">
                     <?= /* I18N: Skip over the headers and menus, to the main content of the page */
                     I18N::translate('Skip to content') ?>
                 </a>
@@ -64,26 +64,27 @@ use Fisharebest\Webtrees\View;
                     <a class="nav-link active" href="<?= e(route(HomePage::class)) ?>"><?= I18N::translate('My page') ?></a>
                 </li>
                 <li class="nav-item dropdown menu-language">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                         <?= I18N::translate('Language') ?>
                     </a>
                     <div class="dropdown-menu">
                         <?php foreach (I18N::activeLocales() as $locale) : ?>
-                            <a class="dropdown-item menu-language-<?= $locale->languageTag() ?> <?= I18N::languageTag() === $locale->languageTag() ? ' active' : '' ?>" href="#" data-post-url="<?= e(route(SelectLanguage::class, ['language' => $locale->languageTag()])) ?>"><?= $locale->endonym() ?></a>
+                            <a class="dropdown-item menu-language-<?= $locale->languageTag() ?> <?= I18N::languageTag() === $locale->languageTag() ? ' active' : '' ?>" href="#" data-wt-post-url="<?= e(route(SelectLanguage::class, ['language' => $locale->languageTag()])) ?>"><?= $locale->endonym() ?></a>
                         <?php endforeach ?>
                     </div>
                 </li>
                 <li class="nav-item menu-logout">
-                    <a class="nav-link" href="#" data-post-url="<?= e(route(Logout::class)) ?>" data-reload-url="<?= e(route(HomePage::class)) ?>"><?= I18N::translate('Sign out') ?></a>
+                    <a class="nav-link" href="#" data-wt-post-url="<?= e(route(Logout::class)) ?>" data-wt-reload-url="<?= e(route(HomePage::class)) ?>"><?= I18N::translate('Sign out') ?></a>
                 </li>
             </ul>
         </header>
 
-        <div id="content">EW.H - MOD ... (V-2.1.17.2)</div>
+        <main id="content">
+            <div> EW.H - MOD ... (V-2.1.17.3)</div>
 
         <?php foreach (FlashMessages::getMessages() as $message) : ?>
             <div class="alert alert-<?= $message->status ?> alert-dismissible" role="alert">
-                <button type="button" class="close" data-dismiss="alert" aria-label="<?= I18N::translate('close') ?>">
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="<?= I18N::translate('close') ?>">
                     <span aria-hidden="true">&times;</span>
                 </button>
                 <?= $message->text ?>
@@ -91,11 +92,12 @@ use Fisharebest\Webtrees\View;
         <?php endforeach ?>
 
         <?= $content ?>
+        </main>
 
         <script src="<?= e(asset('js/vendor.min.js')) ?>"></script>
         <script src="<?= e(asset('js/webtrees.min.js')) ?>"></script>
         <!-- EW.H - MOD ... inject own script referenced by event -->
-        <script src="<?=  $modRoot . '/resources/js/huhwt.min.js' . '?v=2.1.17.2' ?>"></script>
+        <script src="<?=  $modRoot . '/resources/js/huhwt.min.js' . '?v=2.1.17.3' ?>"></script>
         <!--            -->
 
         <?= View::stack('javascript') ?>    <!-- EW.H - MOD ... here goes declaration of MTV-events -->
