--- a/resources/views/layouts/adminMTV.phtml
+++ b/resources/views/layouts/adminMTV.phtml
@@ -17,11 +17,14 @@ use Fisharebest\Webtrees\Module\CustomCssJsModule;
 use Fisharebest\Webtrees\Module\ModuleCustomInterface;
 use Fisharebest\Webtrees\Module\ModuleGlobalInterface;
 use Fisharebest\Webtrees\Services\ModuleService;
+use Fisharebest\Webtrees\Session;
 use Fisharebest\Webtrees\View;
 
-/** @var string $title */
-/** @var string $content */
-/** @var string $modRoot */               // EW.H - MOD ... Root of this Mod
+/** 
+ *  @var string         $title 
+ *  @var string         $content 
+ *  @var string         $modRoot        // EW.H - MOD ... Root of this Mod
+*/
 
 ?>
 
@@ -39,7 +42,8 @@ use Fisharebest\Webtrees\View;
         <link rel="stylesheet" href="<?= e(asset('css/vendor.min.css')) ?>">
         <link rel="stylesheet" href="<?= e(asset('css/administration.min.css')) ?>">
         <!-- EW.H - MOD ... inject own style -->
-        <link rel="stylesheet" href="<?=  $modRoot . '/resources/css/huhwt.min.css' . '?v=2.1.17.4' ?>">
+        <link rel="stylesheet" href="<?=  $modRoot . '/resources/css/huhwt.min.css' . '?v=2.1.18.0' ?>">
+        <link rel="stylesheet" href="<?=  $modRoot . '/resources/css/CCEadapter-actions.css' . '?v=2.1.18.0' ?>">
         <!--            -->
 
         <?= View::stack('styles') ?>
@@ -80,7 +84,8 @@ use Fisharebest\Webtrees\View;
         </header>
 
         <main id="content">
-            <div> EW.H - MOD ... (V-2.1.17.4)</div>
+            <?php $huhwtMtv = Session::get('huhwt-mtv'); ?>
+            <div> <?= $huhwtMtv ?></div>
 
         <?php foreach (FlashMessages::getMessages() as $message) : ?>
             <div class="alert alert-<?= $message->status ?> alert-dismissible" role="alert">
@@ -97,10 +102,9 @@ use Fisharebest\Webtrees\View;
         <script src="<?= e(asset('js/vendor.min.js')) ?>"></script>
         <script src="<?= e(asset('js/webtrees.min.js')) ?>"></script>
         <!-- EW.H - MOD ... inject own script referenced by event -->
-        <script src="<?=  $modRoot . '/resources/js/huhwt.min.js' . '?v=2.1.17.4' ?>"></script>
-        <!--            -->
-
-        <?= View::stack('javascript') ?>    <!-- EW.H - MOD ... here goes declaration of MTV-events -->
+        <script src="<?=  $modRoot . '/resources/js/huhwt.min.js' . '?v=2.1.18.0' ?>"></script>
+        <!-- EW.H - MOD ... here goes declaration of MTV-events -->
+        <?= View::stack('javascript') ?>
 
         <?= app(ModuleService::class)->findByInterface(ModuleGlobalInterface::class)->map(static function (ModuleGlobalInterface $module): string {
     return $module instanceof ModuleCustomInterface || $module instanceof CustomCssJsModule ? '' : $module->bodyContent();
