--- a/resources/views/modules/interactive-tree/MultTVchart.phtml
+++ b/resources/views/modules/interactive-tree/MultTVchart.phtml
@@ -13,13 +13,33 @@ namespace HuHwt\WebtreesMods\Module;
 use HuHwt\WebtreesMods\Module\InteractiveTree\InteractiveTreeModMTV;
 
 use Fisharebest\Webtrees\I18N;
+use Fisharebest\Webtrees\Individual;
+use Fisharebest\Webtrees\Tree;
 
+
+/**
+ * @var Tree        $tree
+ * @var string      $XREFindi
+ * @var string      $innerHTML
+ * @var string      $name
+ * @var string      $module
+ * @var bool        $withCCE
+ */
+
+    $classCCEadapter = 'noCCEadapter';              // there is no CCE instance active ...      -> display: none
+    $urlCCEadapter = '';                            // ... so is no need to define a data-definition
+    if ($withCCE) {
+        $classCCEadapter = '';
+        $urlCCEadapter = 'data-url-Cceadapter="' . e(route(InteractiveTreeModMTV::class, ['module' => $module, 'action' => 'CCEadapter', 'tree' => $tree->name(), 'XREFindi' => $XREFindi])) . '"';
+    }
 ?>
 
-<div id="<?= $name ?>_out" class="tv_out" data-url-details="<?= e(route(InteractiveTreeModMTV::class, ['module' => $module, 'action' => 'Details', 'tree' => $tree->name(), 'dummy' => 'dummy'])) ?>" data-url-individuals="<?= e(route(InteractiveTreeModMTV::class, ['module' => $module, 'action' => 'Individuals', 'tree' => $tree->name(), 'dummy' => 'dummy'])) ?>" style="height: 300px">
+<div id="<?= $name ?>_out" class="tv_out" data-url-details="<?= e(route(InteractiveTreeModMTV::class, ['module' => $module, 'action' => 'Details', 'tree' => $tree->name()])) ?>" data-url-individuals="<?= e(route(InteractiveTreeModMTV::class, ['module' => $module, 'action' => 'Individuals', 'tree' => $tree->name()])) ?>" <?= $urlCCEadapter ?> style="height: 300px">
     <div id="<?= $name ?>_tools">
         <ul>
             <li id="<?= $name ?>bCompact" class="tv_button" title="<?= I18N::translate('Use compact layout') ?>">
+            </li>
+            <li id="<?= $name ?>bClipping" class="tv_button <?= $classCCEadapter ?>" title="<?= I18N::translate('Add this records to the clippings cart') ?>">
             </li>
             <li class="tv_button" id="<?= $name ?>_loading">
                 <i class="icon-loading-small"></i>
@@ -27,6 +47,6 @@ use Fisharebest\Webtrees\I18N;
         </ul>
     </div>
     <div id="<?= $name ?>_in" class="tv_in" dir="ltr">
-        <?= $individual ?>
+        <?= $innerHTML ?>
     </div>
 </div>
