--- a/resources/views/modules/interactive-tree/MultTVpageh2.phtml
+++ b/resources/views/modules/interactive-tree/MultTVpageh2.phtml
@@ -6,13 +6,14 @@
  * Copyright (C) 2020-2022 EW.Heinrich
  */
 
- use Fisharebest\Webtrees\I18N;
-use Fisharebest\Webtrees\View;
+use Fisharebest\Webtrees\Individual;
+
+/**
+ * @var Individual  $individual
+ * @var string      $age
+ */
 
 ?>
-
-<div class="d-flex mb-4">
-    <h2 class="wt-page-title mx-auto">
+    <h2 class="wt-page-title mx-auto mtv-info">
         <?= $individual->fullName() ?>, <?= $individual->lifespan() ?> <?= $age ?>
     </h2>
-</div>
